--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mahfil</title>
+    <title>Mahfil | Dashboard</title>
     <!-- FAVICON -->
     <link
       rel="shortcut icon"
@@ -515,7 +515,7 @@
     <div class="appmenu">
       <ul class="applist">
         <li class="applist-item">
-          <a href="index.html" class="applist-link">
+          <a href="index.html" class="applist-link active">
             <span class="icon">
               <svg
                 width="21"
@@ -540,7 +540,7 @@
         </li>
 
         <li class="applist-item">
-          <a href="#" class="applist-link">
+          <a href="video.html" class="applist-link">
             <span class="icon">
               <svg
                 width="21"
@@ -573,7 +573,7 @@
         </li>
 
         <li class="applist-item">
-          <a href="#" class="applist-link">
+          <a href="analytics.html" class="applist-link">
             <span class="icon">
               <svg
                 width="21"
@@ -598,7 +598,7 @@
         </li>
 
         <li class="applist-item">
-          <a href="#" class="applist-link">
+          <a href="comments.html" class="applist-link">
             <span class="icon">
               <svg
                 width="21"
@@ -1007,7 +1007,7 @@
         <div class="sidebar-body">
           <ul class="sidelist">
             <li class="sidelist-item">
-              <a href="#" class="sidelist-link active">
+              <a href="index.html" class="sidelist-link active">
                 <span class="icon">
                   <svg
                     width="21"
@@ -1045,7 +1045,7 @@
             </li>
 
             <li class="sidelist-item">
-              <a href="#" class="sidelist-link">
+              <a href="video.html" class="sidelist-link">
                 <span class="icon">
                   <svg
                     width="21"
@@ -1083,7 +1083,7 @@
             </li>
 
             <li class="sidelist-item">
-              <a href="#" class="sidelist-link">
+              <a href="analytics.html" class="sidelist-link">
                 <span class="icon">
                   <svg
                     width="17"
@@ -1103,7 +1103,7 @@
             </li>
 
             <li class="sidelist-item">
-              <a href="#" class="sidelist-link">
+              <a href="comments.html" class="sidelist-link">
                 <span class="icon">
                   <svg
                     width="21"
@@ -1141,7 +1141,7 @@
             </li>
 
             <li class="sidelist-item">
-              <a href="#" class="sidelist-link">
+              <a href="support.html" class="sidelist-link">
                 <span class="icon">
                   <svg
                     width="17"
@@ -1161,7 +1161,7 @@
             </li>
 
             <li class="sidelist-item">
-              <a href="#" class="sidelist-link">
+              <a href="settings.html" class="sidelist-link">
                 <span class="icon">
                   <svg
                     width="21"
@@ -1200,9 +1200,19 @@
           </ul>
         </div>
       </aside>
+
+      <!-- MAIN-CONTENT -->
       <section class="main-section"></section>
     </main>
     <!-- MAIN SECTION END -->
+
+    <!-- FOOTER START -->
+    <footer class="footer">
+      <p class="text-copyright">
+        Copyright &copy; 2022 Qtec Solution Ltd. All rights reserved.
+      </p>
+    </footer>
+    <!-- FOOTER-END -->
 
     <!-- BOOTSTRAP JS -->
     <script src="assets/js/bootstrap/bootstrap.bundle.min.js"></script>
