--- a/video.html
+++ b/video.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mahfil | Settings</title>
+    <title>Mahfil | Video</title>
     <!-- FAVICON -->
     <link
       rel="shortcut icon"
@@ -540,7 +540,7 @@
         </li>
 
         <li class="applist-item">
-          <a href="video.html" class="applist-link">
+          <a href="video.html" class="applist-link active">
             <span class="icon">
               <svg
                 width="21"
@@ -760,10 +760,7 @@
                 </li>
 
                 <li class="mobilelist-item">
-                  <a
-                    href="settings.html"
-                    class="mobilelist-link settings active"
-                  >
+                  <a href="settings.html" class="mobilelist-link settings">
                     <span class="icon">
                       <svg
                         width="21"
@@ -1048,7 +1045,7 @@
             </li>
 
             <li class="sidelist-item">
-              <a href="video.html" class="sidelist-link">
+              <a href="video.html" class="sidelist-link active">
                 <span class="icon">
                   <svg
                     width="21"
@@ -1164,7 +1161,7 @@
             </li>
 
             <li class="sidelist-item">
-              <a href="settings.html" class="sidelist-link active">
+              <a href="settings.html" class="sidelist-link">
                 <span class="icon">
                   <svg
                     width="21"
