working on profile

--- a/authentication/profile.html
+++ b/authentication/profile.html
@@ -1217,7 +1217,62 @@
       </aside>
 
       <!-- MAIN-CONTENT -->
-      <section class="main-section"></section>
+      <section class="main-section">
+        <div class="profile">
+          <div class="profile-header">
+            <nav aria-label="breadcrumb">
+              <ol class="breadcrumb">
+                <li class="breadcrumb-item">
+                  <a href="../index.html">Home</a>
+                </li>
+
+                <li class="breadcrumb-item">
+                  <svg
+                    width="12"
+                    height="12"
+                    viewBox="0 0 12 12"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M4.5 2.25L8.25 6L4.5 9.75"
+                      stroke="#718096"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    />
+                  </svg>
+                </li>
+
+                <li class="breadcrumb-item active" aria-current="page">
+                  My Account
+                </li>
+              </ol>
+            </nav>
+
+            <h1 class="title">My Account</h1>
+          </div>
+
+          <div class="profile-body">
+            <aside class="profilemenu">
+              <ul class="profilelist">
+                <li class="profilelist-item">
+                  <a href="profile.html" class="profilelist-link active">
+                    Profile
+                  </a>
+                </li>
+
+                <li class="profilelist-item">
+                  <a href="profile.html" class="profilelist-link">
+                    Change Password
+                  </a>
+                </li>
+              </ul>
+            </aside>
+
+            <div class="profilecontent"></div>
+          </div>
+        </div>
+      </section>
     </main>
     <!-- MAIN SECTION END -->
 
