--- a/authentication/changepass.html
+++ b/authentication/changepass.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mahfil | Profile</title>
+    <title>Mahfil | Change Password</title>
     <!-- FAVICON -->
     <link
       rel="shortcut icon"
@@ -1256,13 +1256,13 @@
             <aside class="myprofilemenu">
               <ul class="myprofilelist">
                 <li class="myprofilelist-item">
-                  <a href="profile.html" class="myprofilelist-link active">
+                  <a href="profile.html" class="myprofilelist-link">
                     Profile
                   </a>
                 </li>
 
                 <li class="myprofilelist-item">
-                  <a href="changepass.html" class="myprofilelist-link">
+                  <a href="changepass.html" class="myprofilelist-link active">
                     Change Password
                   </a>
                 </li>
@@ -1270,84 +1270,53 @@
             </aside>
 
             <div class="profilecontent">
-              <div class="profilecontent-header">
-                <figure class="profilepic">
-                  <img
-                    src="../assets/images/avatar/profile.png"
-                    alt="profilepic"
-                  />
-
-                  <div class="upload">
-                    <input type="file" id="uploadprofile" hidden />
-                    <label for="uploadprofile">
-                      <svg
-                        width="48"
-                        height="47"
-                        viewBox="0 0 48 47"
-                        fill="none"
-                        xmlns="http://www.w3.org/2000/svg"
-                      >
-                        <circle cx="24" cy="23.5" r="23.5" fill="#F7FAFC" />
-                        <mask
-                          id="uploadicon"
-                          style="mask-type: alpha"
-                          maskUnits="userSpaceOnUse"
-                          x="12"
-                          y="8"
-                          width="25"
-                          height="25"
-                        >
-                          <rect
-                            x="12.9727"
-                            y="8.69482"
-                            width="24"
-                            height="24"
-                            fill="#D9D9D9"
-                          />
-                        </mask>
-                        <g mask="url(#uploadicon)">
-                          <path
-                            d="M14.9727 32.6948V28.6948H34.9727V32.6948H14.9727ZM16.9727 26.6948V22.9448L26.0227 13.8948L29.7727 17.6448L20.7227 26.6948H16.9727ZM18.9727 24.6948H19.8727L26.9727 17.6448L26.0227 16.6948L18.9727 23.7948V24.6948ZM30.8977 16.5448L27.1477 12.7948L28.9477 10.9948C29.131 10.7948 29.3643 10.6988 29.6477 10.7068C29.931 10.7155 30.1643 10.8115 30.3477 10.9948L32.6977 13.3448C32.881 13.5282 32.9727 13.7575 32.9727 14.0328C32.9727 14.3075 32.881 14.5448 32.6977 14.7448L30.8977 16.5448Z"
-                            fill="#718096"
-                          />
-                        </g>
-                      </svg>
-                    </label>
-                  </div>
-                </figure>
-
-                <h2 class="username">Sayed Ahmed</h2>
-              </div>
-
-              <div class="profilecontent-body">
-                <form class="profileform">
+              <div class="changepassword">
+                <form class="changeform">
                   <div class="inputbox">
-                    <label for="profilemail" class="inputlabel"> Email </label>
+                    <label for="oldpassword" class="inputlabel">
+                      Old Password
+                    </label>
+
                     <input
-                      type="email"
-                      id="profilemail"
+                      type="password"
+                      id="oldpassword"
                       class="inputfield"
-                      placeholder="sayed123@gmail.com"
+                      placeholder="Enter old password"
                       autocomplete="off"
                     />
                   </div>
 
                   <div class="inputbox">
-                    <label for="profilephone" class="inputlabel">
-                      Phone Number
+                    <label for="newpassword" class="inputlabel">
+                      New Password
                     </label>
+
                     <input
-                      type="tel"
-                      id="profilephone"
+                      type="password"
+                      id="newpassword"
                       class="inputfield"
-                      placeholder="+8801241231231"
+                      placeholder="Enter new password"
+                      autocomplete="off"
+                    />
+                  </div>
+
+                  <div class="inputbox">
+                    <label for="confirmnewpassword" class="inputlabel">
+                      Confirm New Password
+                    </label>
+
+                    <input
+                      type="password"
+                      id="confirmnewpassword"
+                      class="inputfield"
+                      placeholder="Confirm new password"
                       autocomplete="off"
                     />
                   </div>
 
                   <div class="submitbox">
                     <div class="savebox">
-                      <button type="submit" class="btn-submit">Save</button>
+                      <button type="submit" class="btn-submit">Update</button>
                     </div>
                   </div>
                 </form>
