suppert page done

--- a/settings.html
+++ b/settings.html
@@ -1295,7 +1295,7 @@
                   </figure> 
                   <!-- profile pic and upload  -->
                   <figure class="profile-thumb">
-                    <img src="../assets/images/avatar/profile.png" alt="profilepic">
+                    <img src="assets/images/avatar/profile.png" alt="profilepic">
   
                     <div class="upload-profile">
                       <input type="file" id="uploadprofile" hidden="">
