video page added

--- a/analytics.html
+++ b/analytics.html
@@ -1207,7 +1207,7 @@
            <!-- Video Analytics -->
            <div class="videoanalytics">
             <div class="videoanalytics-header">
-                <h2 class="title">Video Analytics</h2>
+                <h2 class="title">Channel Analytics</h2>
                 <div>
                     Sep 4- Oct 1, 2022
                 </div>
