--- a/video.html
+++ b/video.html
@@ -1202,7 +1202,155 @@
       </aside>
 
       <!-- MAIN-CONTENT -->
-      <section class="main-section"></section>
+      <section class="main-section">
+        <div class="videos">
+          <div class="videos-content">
+  
+              <div class="videos-header">
+                  <h2 class="header-title">All Video</h2>
+              </div>
+              <div class="videos-body">
+                <div class="videos-lists table-responsive">
+                  <table class="table table-hover videotable">
+                    <thead>
+                      <tr>
+                          <th>
+                            <div class="customcheck">
+                              <input type="checkbox" id="channel1" class="customcheck-box" hidden="">
+                              <label for="channel1" class="customcheck-label"></label>
+                            </div>
+                          </th>
+                          <th>Videos</th>						
+                          <th>Visibility</th>
+                          <th>Upload Date  </th>
+                          <th>Views</th>
+                          <th>Comments</th>
+                          <th>Likes</th>
+                          <th>Action </th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <td>
+                          <div class="customcheck">
+                            <input type="checkbox" id="channel1" class="customcheck-box">
+                            <label for="channel1" class="customcheck-label"></label>
+                          </div>
+                        </td>
+                        <td>
+                          <a href="video-detail.html">
+                            <figure class="video-thumb">
+                            <img src="assets/images/videothumb/thumbnai.png"  alt="Avatar">
+
+                            </figure>
+                            <div class="title-des">
+                              <span class="title">রমজানের আগে একবার শুনুন </span>
+                              <div class="des-container">
+                                <span class="des">সিয়াম বলতে শুধু  থেকে বিরত থাকা বোঝয় না বরংসিয়াম বলতে শুধু  থেকে বিরত থাকা বোঝয় না বরংসিয়াম বলতে শুধু  থেকে বিরত থাকা বোঝয় না বরংসিয়াম বলতে শুধু  থেকে বিরত থাকা বোঝয় না বরং</span>
+                              </div>
+                            </div>
+                          </a>
+                        </td>
+                        <td>Public</td>                        
+                        <td>2 April, 2022</td>
+                        <td> 20k</td>
+                        <td> 20k</td>
+                        <td> 20k</td>
+                        <td>
+                          <a href="#" class="settings" title="Settings" data-toggle="tooltip">
+                            <span>
+                              <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M7 12C7 10.8954 6.10457 10 5 10C3.89543 10 3 10.8954 3 12C3 13.1046 3.89543 14 5 14C6.10457 14 7 13.1046 7 12Z" fill="#718096"></path>
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M14 12C14 10.8954 13.1046 10 12 10C10.8954 10 10 10.8954 10 12C10 13.1046 10.8954 14 12 14C13.1046 14 14 13.1046 14 12Z" fill="#718096"></path>
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M21 12C21 10.8954 20.1046 10 19 10C17.8954 10 17 10.8954 17 12C17 13.1046 17.8954 14 19 14C20.1046 14 21 13.1046 21 12Z" fill="#718096"></path>
+                                </svg>                                
+                            </span>
+                          </a>   
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>
+                          <div class="customcheck">
+                            <input type="checkbox" id="channel1" class="customcheck-box">
+                            <label for="channel1" class="customcheck-label"></label>
+                          </div>
+                        </td>
+                        <td>
+                          <a href="video-detail.html">
+                            <figure class="video-thumb">
+                            <img src="assets/images/videothumb/thumbnai.png"  alt="Avatar">
+
+                            </figure>
+                            <div class="title-des">
+                              <span class="title">রমজানের আগে একবার শুনুন </span>
+                              <div class="des-container">
+                                <span class="des">সিয়াম বলতে শুধু  থেকে বিরত থাকা বোঝয় না বরং</span>
+                              </div>
+                            </div>
+                          </a>
+                        </td>
+                        <td>Public</td>                        
+                        <td>2 April, 2022</td>
+                        <td> 20k</td>
+                        <td> 20k</td>
+                        <td> 20k</td>
+                        <td>
+                          <a href="#" class="settings" title="Settings" data-toggle="tooltip">
+                            <span>
+                              <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M7 12C7 10.8954 6.10457 10 5 10C3.89543 10 3 10.8954 3 12C3 13.1046 3.89543 14 5 14C6.10457 14 7 13.1046 7 12Z" fill="#718096"></path>
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M14 12C14 10.8954 13.1046 10 12 10C10.8954 10 10 10.8954 10 12C10 13.1046 10.8954 14 12 14C13.1046 14 14 13.1046 14 12Z" fill="#718096"></path>
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M21 12C21 10.8954 20.1046 10 19 10C17.8954 10 17 10.8954 17 12C17 13.1046 17.8954 14 19 14C20.1046 14 21 13.1046 21 12Z" fill="#718096"></path>
+                                </svg>                                
+                            </span>
+                          </a>   
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>
+                          <div class="customcheck">
+                            <input type="checkbox" id="channel1" class="customcheck-box">
+                            <label for="channel1" class="customcheck-label"></label>
+                          </div>
+                        </td>
+                        <td>
+                          <a href="video-detail.html">
+                            <figure class="video-thumb">
+                            <img src="assets/images/videothumb/thumbnai.png"  alt="Avatar">
+
+                            </figure>
+                            <div class="title-des">
+                              <span class="title">রমজানের আগে একবার শুনুন </span>
+                              <div class="des-container">
+                                <span class="des">সিয়াম বলতে শুধু  থেকে বিরত থাকা বোঝয় না বরং</span>
+                              </div>
+                            </div>
+                          </a>
+                        </td>
+                        <td>Public</td>                        
+                        <td>2 April, 2022</td>
+                        <td> 20k</td>
+                        <td> 20k</td>
+                        <td> 20k</td>
+                        <td>
+                          <a href="#" class="settings" title="Settings" data-toggle="tooltip">
+                            <span>
+                              <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M7 12C7 10.8954 6.10457 10 5 10C3.89543 10 3 10.8954 3 12C3 13.1046 3.89543 14 5 14C6.10457 14 7 13.1046 7 12Z" fill="#718096"></path>
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M14 12C14 10.8954 13.1046 10 12 10C10.8954 10 10 10.8954 10 12C10 13.1046 10.8954 14 12 14C13.1046 14 14 13.1046 14 12Z" fill="#718096"></path>
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M21 12C21 10.8954 20.1046 10 19 10C17.8954 10 17 10.8954 17 12C17 13.1046 17.8954 14 19 14C20.1046 14 21 13.1046 21 12Z" fill="#718096"></path>
+                                </svg>                                
+                            </span>
+                          </a>   
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+              </div>
+          </div>
+         </div>
+      </section>
     </main>
     <!-- MAIN SECTION END -->
 
