--- a/video-detail.html
+++ b/video-detail.html
@@ -1267,10 +1267,29 @@
                                     </svg>
                                     </span>
                                 </p>
-                                <select name="" id="">
-                                    <option value="public">Public</option>
-                                    <option value="Private">Private</option>
-                                </select>
+                                <div class="customselect">
+                                  <div class="select-wrapper">
+                                    <div class="select">
+                                      <div class="select-trigger">
+                                        <span class="selectedvalue">Bangladesh</span>
+          
+                                        <span class="arrow">
+                                          <svg width="13" height="6" viewBox="0 0 13 6" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path fill-rule="evenodd" clip-rule="evenodd" d="M0.958496 0L6.50016 6L12.0418 0H0.958496Z" fill="#B5B5BD"/>
+                                          </svg>
+                                        </span>
+                                      </div>
+                                      
+                                      <div class="custom-options">
+                                        <span class="custom-option selected" data-value="Bangladesh">Bangladesh</span>
+                                        <span class="custom-option" data-value="India">India</span>
+                                        <span class="custom-option" data-value="Srilanka">Srilanka</span>
+                                        <span class="custom-option" data-value="China">China</span>
+                                        <span class="custom-option" data-value="Bhutan">Bhutan</span>
+                                      </div>
+                                    </div>
+                                  </div>
+                                </div>
                             </div>
 
                         </div>
@@ -1502,6 +1521,8 @@
 
     <!-- BOOTSTRAP JS -->
     <script src="assets/js/bootstrap/bootstrap.bundle.min.js"></script>
+    <!-- CUSTOM SELECT -->
+     <script src="assets/js/select/select.js"></script>
     <!-- TOOLTIP JS -->
     <script src="assets/js/tooltip/tooltip.js"></script>
 
