problem solved image link

--- a/settings.html
+++ b/settings.html
@@ -869,7 +869,7 @@
                 >
                   <figure class="user-thumbnail">
                     <img
-                      src="../assets/images/user/user.png"
+                      src="assets/images/user/user.png"
                       alt="user-thumbnail"
                     />
                   </figure>
@@ -924,7 +924,7 @@
                       <a href="#" class="droplist-link">
                         <span class="icon">
                           <img
-                            src="../assets/images/user/user.png"
+                            src="assets/images/user/user.png"
                             alt="icon"
                           />
                         </span>
@@ -936,7 +936,7 @@
                       <a href="#" class="droplist-link">
                         <span class="icon">
                           <img
-                            src="../assets/images/user/user.png"
+                            src="assets/images/user/user.png"
                             alt="icon"
                           />
                         </span>
@@ -948,7 +948,7 @@
                       <a href="#" class="droplist-link">
                         <span class="icon">
                           <img
-                            src="../assets/images/user/user.png"
+                            src="assets/images/user/user.png"
                             alt="icon"
                           />
                         </span>
@@ -960,7 +960,7 @@
                       <button type="button" class="droplist-link active">
                         <span class="icon">
                           <img
-                            src="../assets/images/user/user.png"
+                            src="assets/images/user/user.png"
                             alt="icon"
                           />
                         </span>
@@ -1022,7 +1022,7 @@
         <div class="sidebar-body">
           <ul class="sidelist">
             <li class="sidelist-item">
-              <a href="../index.html" class="sidelist-link">
+              <a href="index.html" class="sidelist-link">
                 <span class="icon">
                   <svg
                     width="21"
@@ -1060,7 +1060,7 @@
             </li>
 
             <li class="sidelist-item">
-              <a href="../video.html" class="sidelist-link">
+              <a href="video.html" class="sidelist-link">
                 <span class="icon">
                   <svg
                     width="21"
@@ -1098,7 +1098,7 @@
             </li>
 
             <li class="sidelist-item">
-              <a href="../analytics.html" class="sidelist-link">
+              <a href="analytics.html" class="sidelist-link">
                 <span class="icon">
                   <svg
                     width="17"
@@ -1118,7 +1118,7 @@
             </li>
 
             <li class="sidelist-item">
-              <a href="../comments.html" class="sidelist-link">
+              <a href="comments.html" class="sidelist-link">
                 <span class="icon">
                   <svg
                     width="21"
@@ -1156,7 +1156,7 @@
             </li>
 
             <li class="sidelist-item">
-              <a href="../support.html" class="sidelist-link">
+              <a href="support.html" class="sidelist-link">
                 <span class="icon">
                   <svg
                     width="17"
@@ -1176,7 +1176,7 @@
             </li>
 
             <li class="sidelist-item">
-              <a href="../settings.html" class="sidelist-link">
+              <a href="settings.html" class="sidelist-link">
                 <span class="icon">
                   <svg
                     width="21"
@@ -1223,7 +1223,7 @@
             <nav aria-label="breadcrumb">
               <ol class="breadcrumb">
                 <li class="breadcrumb-item">
-                  <a href="../index.html">Home</a>
+                  <a href="index.html">Home</a>
                 </li>
 
                 <li class="breadcrumb-item">
