--- a/video-detail.html
+++ b/video-detail.html
@@ -1210,7 +1210,7 @@
                     <nav aria-label="breadcrumb" class="breadcrumb-between">
                         <ol class="breadcrumb">
                         <li class="breadcrumb-item">
-                            <a href="../index.html">Home</a>
+                            <a href="index.html">Home</a>
                         </li>
         
                         <li class="breadcrumb-item">
