--- a/comments.html
+++ b/comments.html
@@ -1354,6 +1354,7 @@
                             <div class="footer-bottom">
                               <div class="collapse" id="collapseExample">
                                 <div class="card card-body">
+                                <div class="card card-body">
                                   Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
                                 </div>
                             </div>
