--- a/support.html
+++ b/support.html
@@ -1208,7 +1208,7 @@
               <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">
                   <li class="breadcrumb-item">
-                    <a href="../index.html">Home</a>
+                    <a href="index.html">Home</a>
                   </li>
   
                   <li class="breadcrumb-item">
