homepage section added

--- a/index.html
+++ b/index.html
@@ -1404,6 +1404,109 @@
           </div>
         </div>
 
+          <!-- view comment part -->
+          <div class="view-comment">
+            <div class="row">
+              <div class="col-lg-7 ">
+                <div class="view h-100">
+                  <ul class="nav nav-tabs" id="myTab" role="tablist">
+                   <div class="tab-items">
+                    <li class="nav-item" role="presentation">
+                      <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home-tab-pane" type="button" role="tab" aria-controls="home-tab-pane" aria-selected="true">Views</button>
+                    </li>
+                    <li class="nav-item" role="presentation">
+                      <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile-tab-pane" type="button" role="tab" aria-controls="profile-tab-pane" aria-selected="false">Subscriber</button>
+                    </li>
+                    <li class="nav-item" role="presentation">
+                      <button class="nav-link" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact-tab-pane" type="button" role="tab" aria-controls="contact-tab-pane" aria-selected="false">Reactions</button>
+                    </li>
+                   </div>
+  
+                   <select name="" id="">
+                    <option value="">2022</option>
+                    <option value="">2021</option>
+                    <option value="">2020</option>
+                    <option value="">2019</option>
+                    <option value="">2018</option>
+                    <option value="">2017</option>
+                    <option value="">2016</option>
+                   </select>
+                  </ul>
+                  <div class="tab-content" id="myTabContent">
+                    <div class="tab-pane fade show active py-2" id="home-tab-pane" role="tabpanel" aria-labelledby="home-tab" tabindex="0">
+                      <div class="graph h-100 p-2">
+                        <figure>
+                          <img src="assets/images/graph.svg" class="img-fluid" alt="graph">
+                        </figure>
+                      </div>
+                    </div>
+                    <div class="tab-pane fade" id="profile-tab-pane" role="tabpanel" aria-labelledby="profile-tab" tabindex="0">
+                      <div class="graph h-100 p-2">
+                        <figure>
+                          <img src="assets/images/graph.svg" class="img-fluid" alt="graph">
+                        </figure>
+                      </div>
+                    </div>
+                    <div class="tab-pane fade" id="contact-tab-pane" role="tabpanel" aria-labelledby="contact-tab" tabindex="0">
+                      <div class="graph h-100 p-2">
+                        <figure>
+                          <img src="assets/images/graph.svg" class="img-fluid" alt="graph">
+                        </figure>
+                      </div>
+                    </div>
+                    <div class="tab-pane fade" id="disabled-tab-pane" role="tabpanel" aria-labelledby="disabled-tab" tabindex="0">
+                      <div class="graph h-100 p-2">
+                        <figure>
+                          <img src="assets/images/graph.svg" class="img-fluid" alt="graph">
+                        </figure>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-5 ">
+                <div class="latest-comment">
+                  <div class="latest-comment-content">
+                    <div class="latest-comment-header">
+                      <h3 class="latest-title">Latest Coments</h3>
+                    </div>
+                    <div class="latest-comment-body">
+                      <div class="comment-cards">
+  
+                        <div class="comment-card">
+                          <div class="comment-card-header">
+                            <figure class="comment-image">
+                              <img src="assets/images/avatar/commenter.png" alt="user">
+                            </figure>
+                            <span class="name">Likhon</span>
+                            <span class="time">1 hr. ago</span>
+                          </div>
+                          <div class="comment-card-body">
+                            <p class="comment-text">It is a long established fact that a reader will be distracted by the readable content of a 
+                              page when looking at its layout. The point of using Lorem</p>
+                          </div>
+                        </div>
+  
+                        <div class="comment-card">
+                          <div class="comment-card-header">
+                            <figure class="comment-image">
+                              <img src="assets/images/avatar/commenter.png" alt="user">
+                            </figure>
+                            <span class="name">Likhon</span>
+                            <span class="time">1 hr. ago</span>
+                          </div>
+                          <div class="comment-card-body">
+                            <p class="comment-text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem</p>
+                          </div>
+                        </div>
+  
+                      </div>
+                    </div>
+                    </div>
+                </div>
+              </div>
+            </div>
+          </div>
 
       </section>
     </main>
