modal cover added

--- a/comments.html
+++ b/comments.html
@@ -2230,6 +2230,56 @@
               </div>
            
               <!-- form 2 -->
+
+              <div class="form2" id="form2">
+                <figure class="cover-thumb">
+                  <img src="assets/images/home/modal-cover.png" alt="cover image ">
+                  <!-- upload cover -->
+                  <div class="upload-cover">
+                    <input type="file" id="uploadcover" hidden="">
+                    <label for="uploadcover" class="uploadcover">
+                      <span class="uploadcover-icon">
+                        <svg width="10" height="10" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                          <path d="M1.65837 9.37996C1.33753 9.37996 1.06298 9.26583 0.834699 9.03755C0.606032 8.80888 
+                          0.491699 8.53413 0.491699 8.2133V6.4633H1.65837V8.2133H8.65837V6.4633H9.82503V8.2133C9.82503 
+                          8.53413 9.71089 8.80888 9.48262 9.03755C9.25395 9.26583 8.9792 9.37996 8.65837 9.37996H1.65837ZM4.57503 
+                          7.04663V2.29246L3.05837 3.80913L2.2417 2.9633L5.15837 0.0466309L8.07503 2.9633L7.25837 3.80913L5.7417 
+                          2.29246V7.04663H4.57503Z" fill="#718096"/>
+                        </svg>
+                          
+                      </span>
+                      <span class="uploadcover-title">Upload Cover </span>
+                    </label>
+                  </div>
+
+                </figure> 
+                <figure class="profile-thumb">
+                  <img src="assets/images/home/modal-profile.png" alt="profilepic">
+
+                  <div class="upload-profile">
+                    <input type="file" id="uploadprofile" hidden="">
+                    <label for="uploadprofile">
+                      <svg width="48" height="47" viewBox="0 0 48 47" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <circle cx="24" cy="23.5" r="23.5" fill="#F7FAFC"></circle>
+                        <mask id="uploadicon" style="mask-type: alpha" maskUnits="userSpaceOnUse" x="12" y="8" width="25" height="25">
+                          <rect x="12.9727" y="8.69482" width="24" height="24" fill="#D9D9D9"></rect>
+                        </mask>
+                        <g mask="url(#uploadicon)">
+                          <path d="M14.9727 32.6948V28.6948H34.9727V32.6948H14.9727ZM16.9727 26.6948V22.9448L26.0227 13.8948L29.7727 
+                          17.6448L20.7227 26.6948H16.9727ZM18.9727 24.6948H19.8727L26.9727 17.6448L26.0227 16.6948L18.9727 23.7948V24.6948ZM30.8977 
+                          16.5448L27.1477 12.7948L28.9477 10.9948C29.131 10.7948 29.3643 10.6988 29.6477 10.7068C29.931 10.7155 30.1643 10.8115 
+                          30.3477 10.9948L32.6977 13.3448C32.881 13.5282 32.9727 13.7575 32.9727 14.0328C32.9727 14.3075 32.881 14.5448 32.6977 
+                          14.7448L30.8977 16.5448Z" fill="#718096"></path>
+                        </g>
+                      </svg>
+                    </label>
+                  </div>
+                </figure>
+
+                <div class="btn-wrapper">
+                  <button class="btn-submit">Create Channel</button>
+                </div>
+              </div>
             </div>
           </div>
         </div>
