--- a/index.html
+++ b/index.html
@@ -1620,7 +1620,7 @@
                     <h2 class="videos-title">Latest Videos</h2>
                     <div class="customselect">
                       <div class="select-wrapper">
-                        <div class="select open">
+                        <div class="select">
                           <div class="select-trigger">
                             <span class="selectedvalue">last 90 days</span>
                             <span class="arrow">
