--- a/authentication/changepassword.html
+++ b/authentication/changepassword.html
@@ -34,7 +34,7 @@
               </div>
 
               <div class="authenticationform-body">
-                <div class="inputbox">
+                <div class="inputbox errorfield">
                   <label for="oldpass" class="inputlabel"> Old Password </label>
                   <input
                     type="text"
@@ -43,6 +43,9 @@
                     placeholder="Enter password"
                     autocomplete="off"
                   />
+                  <div class="error">
+                    <p class="error-message">Old password is required</p>
+                  </div>
                 </div>
 
                 <div class="inputbox">
@@ -54,6 +57,10 @@
                     placeholder="Confirm password"
                     autocomplete="off"
                   />
+
+                  <div class="error">
+                    <p class="error-message">New password is required</p>
+                  </div>
                 </div>
 
                 <div class="inputbox">
@@ -67,6 +74,9 @@
                     placeholder="Confirm password"
                     autocomplete="off"
                   />
+                  <div class="error">
+                    <p class="error-message">Passdords do not match </p>
+                  </div>
                 </div>
               </div>
 
