--- a/authentication/forgot.html
+++ b/authentication/forgot.html
@@ -34,7 +34,7 @@
               </div>
 
               <div class="authenticationform-body">
-                <div class="inputbox">
+                <div class="inputbox errorfield">
                   <label for="forgotmail" class="inputlabel">Email</label>
                   <input
                     type="email"
@@ -42,7 +42,10 @@
                     class="inputfield"
                     placeholder="Enter email address"
                     autocomplete="off"
-                  />
+                  /> 
+                  <div class="error">
+                    <p class="error-message">Email is required</p>
+                  </div>
                 </div>
               </div>
 
