--- a/authentication/register.html
+++ b/authentication/register.html
@@ -36,7 +36,7 @@
               </div>
 
               <div class="authenticationform-body">
-                <div class="inputbox">
+                <div class="inputbox errorfield">
                   <label for="regname" class="inputlabel"> Name </label>
                   <input
                     type="text"
@@ -45,6 +45,9 @@
                     placeholder="Enter full name"
                     autocomplete="off"
                   />
+                  <div class="error">
+                    <p class="error-message">Name is required</p>
+                  </div>
                 </div>
 
                 <div class="inputbox">
@@ -56,6 +59,9 @@
                     placeholder="Enter email address"
                     autocomplete="off"
                   />
+                  <div class="error">
+                    <p class="error-message">Email is required</p>
+                  </div>
                 </div>
 
                 <div class="inputbox">
@@ -69,6 +75,9 @@
                     placeholder="Enter phone number"
                     autocomplete="off"
                   />
+                  <div class="error">
+                    <p class="error-message">Phone Number is required</p>
+                  </div>
                 </div>
 
                 <div class="inputbox">
@@ -80,6 +89,9 @@
                     placeholder="Enter password"
                     autocomplete="off"
                   />
+                  <div class="error">
+                    <p class="error-message">Password is required</p>
+                  </div>
                 </div>
 
                 <div class="inputbox">
@@ -93,6 +105,9 @@
                     placeholder="Confirm password"
                     autocomplete="off"
                   />
+                  <div class="error">
+                    <p class="error-message">Password does not match</p>
+                  </div>
                 </div>
               </div>
 
