--- a/index.html
+++ b/index.html
@@ -1756,14 +1756,20 @@
                   
                  </div>
                </div>
-               <div class="inputbox">
+               <div class="inputbox errorfield">
                  <label for="channelname" class="inputlabel"> Channel Name </label>
                  <input type="text" id="channelname" class="inputfield" placeholder="Mega Bangla Tv" autocomplete="off">
+                 <div class="error">
+                  <p class="error-message">Name is required</p>
+                </div>
                </div>
 
-               <div class="inputbox">
+               <div class="inputbox errorfield">
                  <label for="description" class="inputlabel"> Description</label>
                  <textarea id="description" class="textareafield" placeholder="Enter Description"></textarea>
+                 <div class="error">
+                  <p class="error-message">Description is required</p>
+                </div>
                </div>
 
                <div class="keywordbox">
