--- a/settings.html
+++ b/settings.html
@@ -1315,14 +1315,20 @@
                 </div>
                 <div class="settingsform-body">
 
-                  <div class="inputbox">
+                  <div class="inputbox errorfield">
                     <label for="channelname" class="inputlabel"> Channel Name </label>
-                    <input type="text" id="channelname" class="inputfield" placeholder="Mega Bangla Tv" autocomplete="off">
+                    <input type="text" id="channelname" class="inputfield" placeholder="Mega Bangla Tv" autocomplete="off"> 
+                    <div class="error">
+                      <p class="error-message">Channel name is required</p>
+                    </div>
                   </div>
 
                   <div class="inputbox">
                     <label for="description" class="inputlabel"> Description</label>
                     <textarea  id="description" class="textareafield" placeholder="Enter Description"></textarea>
+                    <div class="error">
+                      <p class="error-message">Description is required</p>
+                    </div>
                   </div>
 
                   <div class="keywordbox">
